--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>Todo List</title>
   </head>
   <body>
+    <section class="login">
+      <form class="hidden login-form">
+        <input
+          type="text"
+          required
+          maxlength="15"
+          placeholder="이름을 입력하세요"
+        />
+        <input type="submit" value="확인" />
+      </form>
+    </section>
     <section class="time">
       <div class="date"></div>
       <div class="clock"></div>
     </section>
 
     <script src="./js/time.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
