Edit sayHello function to show text in window

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         />
         <input type="submit" value="확인" />
       </form>
+      <h1 class="hello hidden"></h1>
     </section>
     <section class="time">
       <div class="date"></div>
