Edit time.js const name and edit function to show in window

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 class="hello hidden"></h1>
     </section>
     <section class="time">
-      <div class="date"></div>
+      <div class="calender"></div>
       <div class="clock"></div>
     </section>
 
