Add todo.js and handleTodoSubmit

--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
       </form>
       <h1 class="hello hidden"></h1>
     </section>
+
     <section class="time">
       <div class="calender"></div>
       <div class="clock"></div>
     </section>
 
+    <section class="todo">
+      <form class="todo-form">
+        <input type="text" placeholder="할 일을 적어주세요." required />
+      </form>
+      <ul class="todo-list"></ul>
+    </section>
+
     <script src="./js/time.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/todo.js"></script>
   </body>
 </html>
