--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <script src="./js/time.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/todo.js"></script>
+    <script src="./js/background.js"></script>
   </body>
 </html>
