--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <div class="clock"></div>
     </section>
 
+    <section class="quote">
+      <span class="quote-text"></span>
+      <span class="quote-author"></span>
+    </section>
+
     <section class="todo">
       <form class="todo-form">
         <input type="text" placeholder="할 일을 적어주세요." required />
@@ -37,5 +42,6 @@
     <script src="./js/login.js"></script>
     <script src="./js/todo.js"></script>
     <script src="./js/background.js"></script>
+    <script src="./js/quote.js"></script>
   </body>
 </html>
