Add quote position

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       </section>
 
       <section class="quote">
-        <span class="quote-text"></span>
-        <span class="quote-author"></span>
+        <div class="today-quote">오늘의 명언</div>
+        <div class="quote-text"></div>
+        <div class="quote-author"></div>
       </section>
 
       <section class="todo">
