Add weather position

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
       </section>
 
       <section class="weather">
-        <span class="temperature"></span>
-        <span class="location"></span>
+        <div class="location"></div>
+        <div class="today-weather">오늘의 날씨</div>
+        <div class="temperature"></div>
       </section>
     </main>
 
