--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/62ee6340a7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Todo List</title>
   </head>
   <body>
@@ -42,8 +46,9 @@
       </section>
 
       <section class="todo">
+        <div class="todo-title">알림장</div>
         <form class="todo-form">
-          <input type="text" placeholder="할 일을 적어주세요." required />
+          <input type="text" placeholder="메모하기" required />
         </form>
         <ul class="todo-list"></ul>
       </section>
