Fix weather lan and position

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
       </section>
 
       <section class="weather">
-        <div class="location"></div>
         <div class="today-weather">오늘의 날씨</div>
-        <div class="temperature"></div>
+        <span class="location"></span>
+        <span class="temperature"></span>
+        <div class="description"></div>
       </section>
     </main>
 
